--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/example?serverTimezone=UTC
-spring.datasource.username=gytjr
+spring.datasource.username=root
 spring.datasource.password=gytjr054975
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
